infra-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-test"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx.easydevop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

  - host: "secondnginx.easydevop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-2
            port:
              number: 80

  tls:
  - hosts:
    - "nginx.easydevop.com"
    secretName: "app-secret"
